@@ -1135,6 +1135,44 @@ Result:
         [/end_turn]
     [/event]
 
+    [label]
+        x,y=10,2
+        text="map change"
+    [/label]
+	
+    [event]
+        name=moveto
+        [filter]
+            x,y=10,2
+        [/filter]
+        [message]
+            side=2
+            message="Suddenly, Elves Besieged!"
+        [/message]
+		[replace_map]
+			map="{campaigns/Heir_To_The_Throne/maps/01_The_Elves_Besieged.map}"
+		[/replace_map]		
+    [/event]
+
+    [label]
+        x,y=10,3
+        text="map change2"
+    [/label]
+	
+    [event]
+        name=moveto
+        [filter]
+            x,y=10,3
+        [/filter]
+        [message]
+            side=2
+            message="Suddenly, Blackwater Port!"
+        [/message]
+		[replace_map]
+			map="{campaigns/Heir_To_The_Throne/maps/02_Blackwater_Port.map}"
+		[/replace_map]	
+    [/event]
+
     # Capture connected villages near 13,2 for team 2
     [event]
         name=prestart
