@@ -47,6 +47,8 @@ Version 1.5.7+svn:
    * the animate_unit action can now animate multiple units
    * the animate_unit action can now change the direction the unit is facing
      with a SLF
+   * add a [replace_map] map="file" event that can load a map of a different
+     size in a scenario
  * Miscellaneous and bug fixes:
    * Added the sunset feature to the new dialogs.
    * Fix the calculate feature in the test scenario.
